--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -84,7 +85,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -330,7 +332,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -384,7 +387,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -413,7 +417,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-school"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -439,19 +444,19 @@
           <a class="concept-link"
                data-caption=""
                data-fancybox="concepts"
-               href="images/concept-01.png"><img alt=""
+               href="images/ou-01.png"><img alt=""
                class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
+               src="images/ou-01-thumb.png"></a> <a class="concept-link"
                data-caption=""
                data-fancybox="concepts"
-               href="images/concept-02.png"><img alt=""
+               href="images/ou-02.png"><img alt=""
                class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a> <a class="concept-link"
+               src="images/ou-02-thumb.png"></a> <a class="concept-link"
                data-caption=""
                data-fancybox="concepts"
-               href="images/concept-03.png"><img alt=""
+               href="images/ou-03.png"><img alt=""
                class="thumbnails-concept"
-               src="images/thumbnail-concept-01.png"></a>
+               src="images/ou-03-thumb.png"></a>
         </div>
         <div class="top-56"></div>
       </div>
@@ -460,7 +465,8 @@
     <div class="container-timeline">
       <div class="timeline-ruler">
         <div class="ruler-badge">
-          &nbsp;
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
         </div>
         <div class="ruler-border">
           &nbsp;
@@ -488,12 +494,12 @@
                data-fancybox="vans"
                href="images/img-01.png"><img alt=""
                class="thumbnails-img"
-               src="images/thumbnail-img-01.png"></a> <a class="img-link"
+               src="images/img-01-thumb.png"></a> <a class="img-link"
                data-caption=""
                data-fancybox="vans"
                href="images/img-02.png"><img alt=""
                class="thumbnails-img"
-               src="images/thumbnail-img-02.png"></a>
+               src="images/img-02-thumb.png"></a>
         </div>
       </div>
     </div><!-- End Vans -->
@@ -501,6 +507,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
 
 
 
