--- a/about.html
+++ b/about.html
@@ -64,7 +64,11 @@
         Product Designer
       </div>
     </div>
-    <div class="about-text top-56">
+    <div class="work-date top-32"
+         style="text-transform: uppercase;color:#ababab">
+      About
+    </div>
+    <div class="about-text">
       Ben brings brands, products, and experiences to life using design, code, and deep understanding.
       <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having a side project, and continual learning.</p>
       <p>He believes in the power of design and the power of curious people when they work together.</p>
