--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="work-date top-32"
-         style="text-transform: uppercase;color:#ababab">
+         style="text-transform: uppercase;color:#c1c1c1">
       About
     </div>
     <div class="about-text">
@@ -80,20 +80,25 @@
        style="width: 100%;"></div><!-- End Image Wide -->
   <!-- Content Container -->
   <div class="content-container"
-       style="padding: 64px 32px 128px; max-width: 624px;">
+       style="padding: 128px 32px 128px; max-width: 624px;">
     <a class=""
          href="mailto:btlhart@gmail.com">
-    <div class="card-note">
+    <div class="card-note"
+         style="border-radius: 20px;">
       <div class="h1"
            style="text-align: center;">
         Thanks for stopping&nbsp;by
+      </div>
+      <div style="color: #057AFF;font-size: 20px; line-height: 20px; text-align: center; width: 100%;">
+        •<br>
+        <br>
       </div>
       <div style="font-size: 20px; line-height: 32px; text-align: center;">
         To reach out, please click the link&nbsp;below:
       </div>
       <div class="primary-btn top-24 mobile-stretch"
            style="flex: 0 1 280px;">
-        Connect
+        <div class="icon icon-email"></div>Connect
       </div>
     </div></a>
   </div><!-- End Content Container -->
