--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
       </div></a>
     </div>
   </div><!-- End Hero -->
+  <!-- Spacer -->
+  <div class="top-128"></div><!-- End Spacer -->
   <!-- Content Container -->
   <div class="content-container">
     <div class="h1"
