--- a/index.html
+++ b/index.html
@@ -36,16 +36,26 @@
     </div>
     <div>
       <p style="margin: 0;">Ben builds software, businesses, and experiences from conception to optimization.</p>
-    </div><a class="project-preview top-32"
-         data-caption="&lt;b&gt;Work&lt;/b&gt; — Highlights"
-         data-fancybox="projects-preview"
-         href="images/projects-preview.png"><img alt=""
-         src="images/projects-preview-thumb.png"
-         style="width: 100%;"></a>
-    <div class="work-subtitle-h2 top-8">
-      <b>Work</b> — Highlights
     </div>
   </div><!-- End Hero -->
+  <!-- Preview Hero -->
+  <div class="top-32"
+       style="width: 100%; background: linear-gradient(90deg, #1E1E1E 0%, #070707 100%); padding: 64px 0 40px; opacity: .9;">
+    <div class="content-container">
+      <a class="project-preview"
+           data-caption=""
+           data-fancybox="projects-preview"
+           href="images/projects-preview.png"><img alt=""
+           src="images/projects-preview-thumb.png"
+           style="width: 100%;"></a>
+      <div class="work-subtitle-h2 top-8"
+           style="color: #ffffff;">
+        <b>Work</b> — Highlights
+      </div>
+    </div>
+  </div><!-- End Preview Hero -->
+  <!-- Spacer -->
+  <div class="top-128"></div><!-- End Spacer -->
   <!-- Content Container -->
   <div class="content-container"
        style="padding-bottom: 64px;">
@@ -509,6 +519,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
