--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </div>
   </div><!-- End Hero -->
   <!-- Spacer -->
-  <div class="top-128"></div><!-- End Spacer -->
+  <div class="spacer"></div><!-- End Spacer -->
   <!-- Content Container -->
   <div class="content-container">
     <div class="h1"
@@ -76,10 +76,15 @@
       <p>He believes in the power of design and the power of curious people when they work together.</p>
     </div>
   </div><!-- End Content Container -->
-  <!-- Image Wide -->
-  <div class="image-wide"><img alt=""
-       src="images/about-image.png"
-       style="width: 100%;"></div><!-- End Image Wide -->
+  <!-- Preview Hero -->
+  <div class="top-64"
+       style="width: 100%; background: linear-gradient(90deg, #1E1E1E 0%, #070707 100%); padding: 64px 0 64px; opacity: .9;">
+    <div class="content-container">
+      <a class="project-preview"><img alt=""
+           src="images/about-image.png"
+           style="width: 100%;"></a>
+    </div>
+  </div><!-- End Preview Hero -->
   <!-- Content Container -->
   <div class="content-container"
        style="padding: 128px 32px 128px; max-width: 624px;">
@@ -91,7 +96,7 @@
            style="text-align: center;">
         Thanks for stopping&nbsp;by
       </div>
-      <div style="color: #057AFF;font-size: 20px; line-height: 20px; text-align: center; width: 100%;">
+      <div class="dot">
         •<br>
         <br>
       </div>
