--- a/about.html
+++ b/about.html
@@ -77,9 +77,10 @@
     </div>
   </div><!-- End Content Container -->
   <!-- Preview Hero -->
-  <div class="top-64"
-       style="width: 100%; background: linear-gradient(90deg, #1E1E1E 0%, #070707 100%); padding: 64px 0 64px; opacity: .9;">
-    <div class="content-container">
+  <div class="stripe"
+       style="">
+    <div class="content-container"
+         style="padding-bottom: 24px;">
       <a class="project-preview"><img alt=""
            src="images/about-image.png"
            style="width: 100%;"></a>
