--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       </div>
     </div>
     <div>
-      <p style="margin: 0;">Ben builds software, businesses, and experiences from conception to optimization.</p>
+      <p style="margin: 0 0 64px;">Ben builds software, businesses, and experiences from conception to optimization.</p>
     </div>
   </div><!-- End Hero -->
   <!-- Preview Hero -->
-  <div class="top-32"
-       style="width: 100%; background: linear-gradient(90deg, #1E1E1E 0%, #070707 100%); padding: 64px 0 40px; opacity: .9;">
+  <div class="stripe"
+       style="">
     <div class="content-container">
       <a class="project-preview"
            data-caption=""
@@ -49,7 +49,7 @@
            src="images/projects-preview-thumb.png"
            style="width: 100%;"></a>
       <div class="work-subtitle-h2 top-8"
-           style="color: #ffffff;">
+           style="">
         <b>Work</b> — Highlights
       </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="work-subtitle-h1">
           Designer & Developer expanding internal Learning Management System (LMS)
         </div>
-        <div class="top-56"></div>
+        <div class="top-128"></div>
       </div>
     </div><!-- End BCG -->
     <!-- Remesh -->
@@ -328,7 +328,7 @@
             </div>
           </div>
         </div>
-        <div class="top-56"></div>
+        <div class="top-128"></div>
       </div>
     </div><!-- End Remesh -->
     <!-- Logrr -->
@@ -383,7 +383,7 @@
                  src="images/logrr-04-thumb.png"></a>
           </div>
         </div>
-        <div class="top-56"></div>
+        <div class="top-128"></div>
       </div>
     </div><!-- End Logrr -->
     <!-- Techstars -->
@@ -413,7 +413,7 @@
         <div class="work-subtitle-h1">
           Pitch, branding, and product design for startup accelerator cohort companies
         </div>
-        <div class="top-56"></div>
+        <div class="top-128"></div>
       </div>
     </div><!-- End Techstars -->
     <!-- University -->
@@ -461,7 +461,7 @@
                class="thumbnails-university"
                src="images/university-03-thumb.png"></a>
         </div>
-        <div class="top-56"></div>
+        <div class="top-128"></div>
       </div>
     </div><!-- End University -->
     <!-- Vans -->
@@ -509,7 +509,7 @@
     <!-- About Page Button -->
      <a class="mobile-stretch"
          href="about.html"
-         style="margin: 48px auto;">
+         style="margin: 128px auto 0;">
     <div class="primary-btn top-24 mobile-stretch">
       Learn More and Connect
       <div class="icon icon-next"
@@ -519,6 +519,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
