--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-bcg.jpg);">
+             style="background-image: url(images/hero-bcg.png); filter: drop-shadow(0px 0px 250px rgba(0, 159, 73, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-remesh.png);">
+             style="background-image: url(images/hero-remesh.png); filter: drop-shadow(0px 0px 250px rgba(0, 115, 227, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -352,7 +352,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-logrr.png);">
+             style="background-image: url(images/hero-logrr.png); filter: drop-shadow(0px 0px 250px rgba(19, 163, 251, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -407,7 +407,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-techstars.png);">
+             style="background-image: url(images/hero-techstars.png); filter: drop-shadow(0px 0px 250px rgba(0, 0, 0, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -437,7 +437,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-ou.png);">
+             style="background-image: url(images/hero-ou.png); filter: drop-shadow(0px 0px 250px rgba(132, 22, 23, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -485,7 +485,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-vans.png);">
+             style="background-image: url(images/hero-vans.png); filter: drop-shadow(0px 0px 250px rgba(213, 25, 32, 0.2));">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -519,6 +519,21 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
