--- a/index.html
+++ b/index.html
@@ -39,23 +39,20 @@
     </div>
   </div><!-- End Hero -->
   <!-- Preview Hero -->
-  <div class="stripe"
-       style="">
-    <div class="content-container">
-      <a class="project-preview"
-           data-caption=""
-           data-fancybox="projects-preview"
-           href="images/projects-preview.png"><img alt=""
-           src="images/projects-preview-thumb.png"
-           style="width: 100%;"></a>
-      <div class="work-subtitle-h2 top-8"
-           style="">
-        <b>Work</b> — Highlights
-      </div>
+  <div class="content-container">
+    <a class="project-preview"
+         data-caption=""
+         data-fancybox="projects-preview"
+         href="images/projects-preview.png"><img alt=""
+         src="images/projects-preview-thumb.png"
+         style="width: 100%;"></a>
+    <div class="work-subtitle-h2 top-8"
+         style="">
+      <b>Work</b> — Highlights
     </div>
   </div><!-- End Preview Hero -->
   <!-- Spacer -->
-  <div class="top-128"></div><!-- End Spacer -->
+  <div class="top-64"></div><!-- End Spacer -->
   <!-- Content Container -->
   <div class="content-container"
        style="padding-bottom: 64px;">
@@ -509,8 +506,8 @@
     <!-- About Page Button -->
      <a class="mobile-stretch"
          href="about.html"
-         style="margin: 128px auto 0;">
-    <div class="primary-btn top-24 mobile-stretch">
+         style="margin: 64px auto 0;">
+    <div class="primary-btn mobile-stretch">
       Learn More and Connect
       <div class="icon icon-next"
            style="margin:0 0 0 8px;"></div>
@@ -519,6 +516,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
 
 
 
