--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       <div class="timeline-work">
         <div class="work-header">
           <div class="work-title">
-            University of Oklahoma
+            University
           </div>
           <div class="work-date">
             2014
@@ -516,6 +516,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
 
 
 
