--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                    style="background-image: url(images/prototype-01-thumb.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-document"></div>View Prototype
+                <div class="icon icon-document"></div>Open Prototype
               </div>
             </div></a>
             <div class="work-subtitle-h2 top-16">
@@ -185,7 +185,7 @@
                    style="background-image: url(images/prototype-02-thumb.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-document"></div>View Prototype
+                <div class="icon icon-document"></div>Open Prototype
               </div>
             </div></a>
             <div class="work-subtitle-h2 top-16">
@@ -207,7 +207,7 @@
                    style="background-image: url(images/casestudy-thumb.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-document"></div>View Case Study
+                View Case Study
               </div>
             </div></a> <a data-caption=""
                  data-fancybox="casestudy"
@@ -516,6 +516,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
 
 
 
