--- a/index.html
+++ b/index.html
@@ -38,19 +38,6 @@
       <p style="margin: 0 0 32px;">Ben builds software, businesses, and experiences from conception to optimization.</p>
     </div>
   </div><!-- End Hero -->
-  <!-- Preview Hero -->
-  <div class="content-container">
-    <a class="project-preview"
-         data-caption=""
-         data-fancybox="projects-preview"
-         href="images/projects-preview.png"><img alt=""
-         src="images/projects-preview-thumb.png"
-         style="width: 100%;"></a>
-    <div class="work-subtitle-h2 top-8"
-         style="">
-      <b>Work</b> — Highlights
-    </div>
-  </div><!-- End Preview Hero -->
   <!-- Spacer -->
   <div class="top-64"></div><!-- End Spacer -->
   <!-- Content Container -->
@@ -207,7 +194,7 @@
                    style="background-image: url(images/casestudy-thumb.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                View Case Study
+                <div class="icon icon-view"></div>View Case Study
               </div>
             </div></a> <a data-caption=""
                  data-fancybox="casestudy"
@@ -516,6 +503,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
 
 
 
