--- a/about.html
+++ b/about.html
@@ -77,18 +77,17 @@
     </div>
   </div><!-- End Content Container -->
   <!-- Preview Hero -->
-  <div class="stripe"
-       style="">
-    <div class="content-container"
-         style="padding-bottom: 24px;">
-      <a class="project-preview"><img alt=""
-           src="images/about-image.png"
-           style="width: 100%;"></a>
-    </div>
+  <div class="content-container">
+    <a class="project-preview top-40"
+         data-caption=""
+         data-fancybox="projects-preview"
+         href="images/projects-preview.png"><img alt=""
+         src="images/projects-preview-thumb.png"
+         style="width: 100%;"></a>
   </div><!-- End Preview Hero -->
   <!-- Content Container -->
   <div class="content-container"
-       style="padding: 128px 32px 128px; max-width: 624px;">
+       style="padding: 128px 32px 128px; max-width: 520px;">
     <a class=""
          href="mailto:btlhart@gmail.com">
     <div class="card-note"
