--- a/about.html
+++ b/about.html
@@ -84,6 +84,9 @@
          href="images/projects-preview.png"><img alt=""
          src="images/projects-preview-thumb.png"
          style="width: 100%;"></a>
+    <div class="work-subtitle-h2 top-8">
+      UI/UX • Product • Code • Illustration • Animation • Strategy • Brand
+    </div>
   </div><!-- End Preview Hero -->
   <!-- Content Container -->
   <div class="content-container"
@@ -108,6 +111,10 @@
         <div class="icon icon-email"></div>Connect
       </div>
     </div></a>
+    <div style="width: 100%; justify-content: center; display: flex;">
+      <a class="secondary-link top-32"
+           href="index.html"><b>Back to Home</b></a>
+    </div>
   </div><!-- End Content Container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script>
