--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
   </div><!-- End Header -->
   <!-- Hero -->
-  <div class="hero">
+  <div class="hero"
+       id="top">
     <div class="h1"
          style="width: 100%;">
       Ben Hart
@@ -68,7 +69,11 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          Designer & Developer expanding internal Learning Management System (LMS)
+          <b>Outside Consultant</b> — Designer/Developer expanding internal Learning Management System (LMS)
+        </div>
+        <div class="system-note top-32">
+          <div class="icon icon-information"
+               style="filter: invert(38%) sepia(1%) saturate(0%) hue-rotate(36deg) brightness(94%) contrast(90%);"></div>Work available upon request
         </div>
         <div class="top-64"></div>
       </div>
@@ -98,7 +103,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          First Designer — Lead product design and marketing from pre-funding to Series A
+          <b>Founding Team Designer</b> — Lead product design and marketing from pre-funding to Series A
         </div>
         <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit;">
@@ -340,7 +345,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          Product, brand, and communication design for early stage tech startup
+          <b>Early Stage Startup</b> — Product, brand, and communication design for early stage tech startup
         </div>
         <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit;">
@@ -395,7 +400,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          Pitch, branding, and product design for startup accelerator cohort companies
+          <b>Startup Accelerator</b> — Pitch, branding, and product design for startup accelerator cohort companies
         </div>
         <div class="top-64"></div>
       </div>
@@ -425,25 +430,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          Design explorations and concepts from time at University
-        </div>
-        <div class="work-thumbnails top-32">
-          <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-01.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-01-thumb.png"></a> <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-02.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-02-thumb.png"></a> <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-03.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-03-thumb.png"></a>
+          <b>BFA</b> — Visual Communication
         </div>
         <div class="top-64"></div>
       </div>
@@ -473,7 +460,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          US Open of Surfing experiential marketing digital activation
+          <b>"Off The Wall Pass"</b> — US Open of Surfing experiential marketing digital activation
         </div>
         <div class="work-thumbnails top-32">
           <a class="vans-link"
@@ -496,13 +483,66 @@
          style="margin: 64px auto 0;">
     <div class="primary-btn mobile-stretch">
       Learn More and Connect
-      <div class="icon icon-next"
+      <div class="icon icon-next icon-blue"
            style="margin:0 0 0 8px;"></div>
     </div></a> <!-- End About Page Button -->
+    <div style="width: 100%; justify-content: center; display: flex;">
+      <a class="secondary-link top-24"
+           href="#top"><b>Back to Top</b></a>
+    </div>
   </div><!-- End Content Container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
