--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-bcg.png); filter: drop-shadow(0px 0px 250px rgba(0, 159, 73, 0.2));">
+             style="background-image: url(images/hero-bcg.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-remesh.png); filter: drop-shadow(0px 0px 250px rgba(0, 115, 227, 0.2));">
+             style="background-image: url(images/hero-remesh.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -341,7 +341,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-logrr.png); filter: drop-shadow(0px 0px 250px rgba(19, 163, 251, 0.2));">
+             style="background-image: url(images/hero-logrr.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -396,7 +396,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-techstars.png); filter: drop-shadow(0px 0px 250px rgba(0, 0, 0, 0.2));">
+             style="background-image: url(images/hero-techstars.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -426,7 +426,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-ou.png); filter: drop-shadow(0px 0px 250px rgba(132, 22, 23, 0.2));">
+             style="background-image: url(images/hero-ou.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
@@ -456,7 +456,7 @@
           </div>
         </div>
         <div class="work-hero"
-             style="background-image: url(images/hero-vans.png); filter: drop-shadow(0px 0px 250px rgba(213, 25, 32, 0.2));">
+             style="background-image: url(images/hero-vans.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
