--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="work-subtitle-h1">
           <b>Founding Team Designer</b> — Lead product design and marketing from pre-funding to Series A
         </div>
-        <!-- <div class="work-thumbnails top-32">
+        <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
                  data-caption=""
@@ -152,6 +152,41 @@
                  class="thumbnails-remesh"
                  src="images/remesh-08-thumb.png"></a>
           </div>
+          <div style="display: flex; justify-content: inherit; margin-top: 4%; width: 100%;">
+            <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/210475210"
+                 data-caption="https://vimeo.com/manage/videos/210475210"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/210475210"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/210475210"
+                 data-caption="https://vimeo.com/manage/videos/210475210"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/210475210"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/210475210"
+                 data-caption="https://vimeo.com/manage/videos/210475210"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/210475210"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/210475210"
+                 data-caption="https://vimeo.com/manage/videos/210475210"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/210475210"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-03-thumb.png"></a>
+          </div>
         </div>
         <div class="card-prototype-container top-40">
           <div class="card-prototype-columnns top-24">
@@ -184,7 +219,7 @@
               <b>Deep Data Panel</b> — Filtering down into response data from a research conversation on Remesh
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="card-prototype-container top-40">
           <div class="card-prototype-columnns top-24"
                style="width: 100%;">
@@ -211,7 +246,7 @@
                  href="images/casestudy-03.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/casestudy-03-thumb.png"
-                 style="display: none;"></a> <a data-caption=""
+                 style="display: none;"></a>  <a data-caption=""
                  data-fancybox="casestudy"
                  href="images/casestudy-04.png"><img alt=""
                  class="thumbnails-remesh"
@@ -347,7 +382,7 @@
         <div class="work-subtitle-h1">
           <b>Early Stage Startup</b> — Product, brand, and communication design for early stage tech startup
         </div>
-        <!-- <div class="work-thumbnails top-32">
+        <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
                  data-caption=""
@@ -371,7 +406,7 @@
                  class="thumbnails-remesh"
                  src="images/logrr-04-thumb.png"></a>
           </div>
-        </div> -->
+        </div>
         <div class="top-64"></div>
       </div>
     </div><!-- End Logrr -->
@@ -431,6 +466,24 @@
         </div>
         <div class="work-subtitle-h1">
           <b>BFA</b> — Visual Communication
+        </div>
+        <div class="work-thumbnails top-32">
+          <a class="university-link"
+               data-caption=""
+               data-fancybox="university"
+               href="images/university-01.png"><img alt=""
+               class="thumbnails-university"
+               src="images/university-01-thumb.png"></a> <a class="university-link"
+               data-caption=""
+               data-fancybox="university"
+               href="images/university-02.png"><img alt=""
+               class="thumbnails-university"
+               src="images/university-02-thumb.png"></a> <a class="university-link"
+               data-caption=""
+               data-fancybox="university"
+               href="images/university-03.png"><img alt=""
+               class="thumbnails-university"
+               src="images/university-03-thumb.png"></a>
         </div>
         <div class="top-64"></div>
       </div>
