--- a/index.html
+++ b/index.html
@@ -106,7 +106,42 @@
           <b>Founding Team Designer</b> — Lead product design and marketing from pre-funding to Series A
         </div>
         <div class="work-thumbnails top-32">
-          <div style="display: flex; justify-content: inherit;">
+          <div style="display: flex; justify-content: inherit; width: 100%;">
+            <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/415061627"
+                 data-caption="Caption"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/415061627"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-01-thumb-video.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/415060693"
+                 data-caption="Caption"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/415060693"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-02-thumb-video.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/182428271"
+                 data-caption="Caption"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/182428271"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-03-thumb-video.png"></a> <a class="remesh-link"
+                 data-type="iframe"
+                 data-src="https://player.vimeo.com/video/210475210"
+                 data-caption="Caption"
+                 data-fancybox
+                 data-iframe='{"preload":false}'
+                 href="https://player.vimeo.com/video/210475210"><img alt=""
+                 class="thumbnails-remesh"
+                 src="images/remesh-04-thumb-video.png"></a>
+          </div>
+          <div style="display: flex; justify-content: inherit; margin-top: 4%;">
             <a class="remesh-link"
                  data-caption=""
                  data-fancybox="remesh"
@@ -151,41 +186,6 @@
                  href="images/remesh-08.png"><img alt=""
                  class="thumbnails-remesh"
                  src="images/remesh-08-thumb.png"></a>
-          </div>
-          <div style="display: flex; justify-content: inherit; margin-top: 4%; width: 100%;">
-            <a class="remesh-link"
-                 data-type="iframe"
-                 data-src="https://player.vimeo.com/video/210475210"
-                 data-caption="https://vimeo.com/manage/videos/210475210"
-                 data-fancybox
-                 data-iframe='{"preload":false}'
-                 href="https://player.vimeo.com/video/210475210"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
-                 data-type="iframe"
-                 data-src="https://player.vimeo.com/video/210475210"
-                 data-caption="https://vimeo.com/manage/videos/210475210"
-                 data-fancybox
-                 data-iframe='{"preload":false}'
-                 href="https://player.vimeo.com/video/210475210"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
-                 data-type="iframe"
-                 data-src="https://player.vimeo.com/video/210475210"
-                 data-caption="https://vimeo.com/manage/videos/210475210"
-                 data-fancybox
-                 data-iframe='{"preload":false}'
-                 href="https://player.vimeo.com/video/210475210"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/remesh-03-thumb.png"></a> <a class="remesh-link"
-                 data-type="iframe"
-                 data-src="https://player.vimeo.com/video/210475210"
-                 data-caption="https://vimeo.com/manage/videos/210475210"
-                 data-fancybox
-                 data-iframe='{"preload":false}'
-                 href="https://player.vimeo.com/video/210475210"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/remesh-03-thumb.png"></a>
           </div>
         </div>
         <div class="card-prototype-container top-40">
@@ -547,133 +547,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
