--- a/about.html
+++ b/about.html
@@ -36,22 +36,29 @@
            href="mailto:btlhart@gmail.com">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-email"></div>Email
-      </div></a> <a class="mobile-stretch"
+      </div>
+    </a> 
+    <a class="mobile-stretch"
            href="https://www.linkedin.com/in/btlhart/"
            target="_blank">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-linkedin"></div>LinkedIn
-      </div></a> <a class="mobile-stretch"
+      </div>
+    </a> 
+    <!-- <a class="mobile-stretch"
            href="https://twitter.com/btlhart"
            target="_blank">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-twitter"></div>Twitter
-      </div></a> <a class="mobile-stretch"
+      </div>
+    </a>  -->
+    <!-- <a class="mobile-stretch"
            href="https://instagram.com/btlhart"
            target="_blank">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-instagram"></div>Instagram
-      </div></a>
+      </div>
+    </a> -->
     </div>
   </div><!-- End Hero -->
   <!-- Spacer -->
@@ -71,8 +78,8 @@
       About
     </div>
     <div class="about-text">
-      Ben brings brands, products, and experiences to life using design, code, and deep understanding.
-      <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having a side project, and continual learning.</p>
+      Ben brings brands, products, and experiences to life using design, code,   and user research.
+      <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having side projects, and continual learning.</p>
       <p>He believes in the power of design and the power of curious people when they work together.</p>
     </div>
   </div><!-- End Content Container -->
