--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="work-subtitle-h1">
           <b>Founding Team Designer</b> — Lead product design and marketing from pre-funding to Series A
         </div>
-        <div class="work-thumbnails top-32">
+        <!-- <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit; width: 100%;">
             <a class="remesh-link"
                  data-type="iframe"
@@ -219,7 +219,7 @@
               <b>Deep Data Panel</b> — Filtering down into response data from a research conversation on Remesh
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="card-prototype-container top-40">
           <div class="card-prototype-columnns top-24"
                style="width: 100%;">
@@ -382,7 +382,7 @@
         <div class="work-subtitle-h1">
           <b>Early Stage Startup</b> — Product, brand, and communication design for early stage tech startup
         </div>
-        <div class="work-thumbnails top-32">
+        <!-- <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit;">
             <a class="remesh-link"
                  data-caption=""
@@ -406,7 +406,7 @@
                  class="thumbnails-remesh"
                  src="images/logrr-04-thumb.png"></a>
           </div>
-        </div>
+        </div> -->
         <div class="top-64"></div>
       </div>
     </div><!-- End Logrr -->
@@ -467,7 +467,7 @@
         <div class="work-subtitle-h1">
           <b>BFA</b> — Visual Communication
         </div>
-        <div class="work-thumbnails top-32">
+        <!-- <div class="work-thumbnails top-32">
           <a class="university-link"
                data-caption=""
                data-fancybox="university"
@@ -484,7 +484,7 @@
                href="images/university-03.png"><img alt=""
                class="thumbnails-university"
                src="images/university-03-thumb.png"></a>
-        </div>
+        </div> -->
         <div class="top-64"></div>
       </div>
     </div><!-- End University -->
