--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
         <div class="icon icon-twitter"></div>Twitter
       </div>
     </a>  -->
-    <!-- <a class="mobile-stretch"
+    <a class="mobile-stretch"
            href="https://instagram.com/btlhart"
            target="_blank">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-instagram"></div>Instagram
       </div>
-    </a> -->
+    </a>
     </div>
   </div><!-- End Hero -->
   <!-- Spacer -->
