--- a/index.html
+++ b/index.html
@@ -44,6 +44,66 @@
   <!-- Content Container -->
   <div class="content-container"
        style="padding-bottom: 64px;">
+    <!-- ThirdLine -->
+    <div class="container-timeline">
+      <div class="timeline-ruler">
+        <div class="ruler-badge">
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
+        </div>
+        <div class="ruler-border">
+          &nbsp;
+        </div>
+      </div>
+      <div class="timeline-work">
+        <div class="work-header">
+          <div class="work-title">
+            ThirdLine
+          </div>
+          <div class="work-date">
+            2022 - Present
+          </div>
+        </div>
+        <div class="work-hero"
+             style="background-image: url(images/hero-thirdline.png);">
+          &nbsp;
+        </div>
+        <div class="work-subtitle-h1">
+          <b>Design Consultant</b> — Early stage product development, design, and marketing
+        </div>
+        <div class="top-64"></div>
+      </div>
+    </div><!-- End ThirdLine -->
+    <!-- Spectacular -->
+    <div class="container-timeline">
+      <div class="timeline-ruler">
+        <div class="ruler-badge">
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
+        </div>
+        <div class="ruler-border">
+          &nbsp;
+        </div>
+      </div>
+      <div class="timeline-work">
+        <div class="work-header">
+          <div class="work-title">
+            Spectacular
+          </div>
+          <div class="work-date">
+            2022 - Present
+          </div>
+        </div>
+        <div class="work-hero"
+             style="background-image: url(images/hero-spectacular.png);">
+          &nbsp;
+        </div>
+        <div class="work-subtitle-h1">
+          <b>App Side Project</b> — <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
+        </div>
+        <div class="top-64"></div>
+      </div>
+    </div><!-- End Spectacular -->
     <!-- BCG -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -61,7 +121,7 @@
             BCG
           </div>
           <div class="work-date">
-            2020 - Present
+            2020 - 2022
           </div>
         </div>
         <div class="work-hero"
