--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>App Side Project</b> — <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
+          <b>Side Project</b> — <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
         </div>
         <div class="top-64"></div>
       </div>
@@ -163,7 +163,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Founding Team Designer</b> — Lead product design and marketing from pre-funding to Series A
+          <b>Founding Team Design Lead</b> — Lead product design and marketing from pre-funding to Series A
         </div>
         <!-- <div class="work-thumbnails top-32">
           <div style="display: flex; justify-content: inherit; width: 100%;">
