--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
       About
     </div>
     <div class="about-text">
-      Ben brings brands, products, and experiences to life using design, code,   and user research.
+      Ben brings products, experiences, and brands to life using design, code, research and strategy.
       <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having side projects, and continual learning.</p>
       <p>He believes in the power of design and the power of curious people when they work together.</p>
     </div>
