--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- Header -->
-  <div class="header">
+  <!-- <div class="header">
     <div class="nav">
       <div class="nav-btn-active">
         Home
@@ -23,10 +23,48 @@
         About
       </div></a>
     </div>
-  </div><!-- End Header -->
+  </div> -->
+  <!-- End Header -->
   <!-- Hero -->
-  <div class="hero"
-       id="top">
+  <div class="hero">
+    <img alt="avatar"
+         class="avatar"
+         src="images/avatar.jpg">
+    <div class="break"></div>
+    <div class="contact centered top-40">
+      <a class="mobile-stretch"
+           href="mailto:btlhart@gmail.com">
+      <div class="primary-btn sides-8 mobile-stretch">
+        <div class="icon icon-email"></div>Email
+      </div>
+    </a> 
+    <a class="mobile-stretch"
+           href="https://www.linkedin.com/in/btlhart/"
+           target="_blank">
+      <div class="primary-btn sides-8 mobile-stretch">
+        <div class="icon icon-linkedin"></div>LinkedIn
+      </div>
+    </a> 
+    <!-- <a class="mobile-stretch"
+           href="https://twitter.com/btlhart"
+           target="_blank">
+      <div class="primary-btn sides-8 mobile-stretch">
+        <div class="icon icon-twitter"></div>Twitter
+      </div>
+    </a>  -->
+    <a class="mobile-stretch"
+           href="https://instagram.com/btlhart"
+           target="_blank">
+      <div class="primary-btn sides-8 mobile-stretch">
+        <div class="icon icon-instagram"></div>Instagram
+      </div>
+    </a>
+    </div>
+  </div><!-- End Hero -->
+  <!-- Spacer -->
+  <div class="spacer"></div><!-- End Spacer -->
+  <!-- Content Container -->
+  <div class="content-container">
     <div class="h1"
          style="width: 100%;">
       Ben Hart
@@ -35,15 +73,83 @@
         Product Designer
       </div>
     </div>
-    <div>
-      <p style="margin: 0 0 32px;">Ben builds software, businesses, and experiences from conception to optimization.</p>
+    <div class="work-date top-32"
+         style="text-transform: uppercase;color:#c1c1c1">
+      About
     </div>
-  </div><!-- End Hero -->
+    <div class="about-text">
+      Ben brings products, experiences, and brands to life using design, code, research and strategy.
+      <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having side projects, and continual learning.</p>
+      <p>He believes in the power of design and the power of curious people when they work together.</p>
+    </div>
+  </div><!-- End Content Container -->
   <!-- Spacer -->
   <div class="top-64"></div><!-- End Spacer -->
   <!-- Content Container -->
   <div class="content-container"
        style="padding-bottom: 64px;">
+    <!-- Spectacular -->
+    <div class="container-timeline">
+      <div class="timeline-ruler">
+        <div class="ruler-badge">
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
+        </div>
+        <div class="ruler-border">
+          &nbsp;
+        </div>
+      </div>
+      <div class="timeline-work">
+        <div class="work-header">
+          <div class="work-title">
+            DigitalRanch
+          </div>
+          <!-- <div class="work-date">
+            2022 - Present
+          </div> -->
+        </div>
+        <div class="work-hero"
+             style="background-image: url(images/hero-dr-1.png);">
+          &nbsp;
+        </div>
+        <div class="work-subtitle-h1">
+          <b>Founder</b> — Digital product and creative agency: <a class="secondary-link" style="display: inline-block;" href="https://digital-ranch.webflow.io" target="_blank">digitalranch.co</a>
+        </div>
+        <div class="top-64"></div>
+      </div>
+    </div>
+    <!-- End Spectacular -->
+    <!-- Spectacular -->
+    <div class="container-timeline">
+      <div class="timeline-ruler">
+        <div class="ruler-badge">
+          <div class="icon icon-work"
+               style="margin: 0;"></div>
+        </div>
+        <div class="ruler-border">
+          &nbsp;
+        </div>
+      </div>
+      <div class="timeline-work">
+        <div class="work-header">
+          <div class="work-title">
+            Spec.
+          </div>
+          <!-- <div class="work-date">
+            2022 - Present
+          </div> -->
+        </div>
+        <div class="work-hero"
+             style="background-image: url(images/hero-spec.png);">
+          &nbsp;
+        </div>
+        <div class="work-subtitle-h1">
+          <b>Founder</b> — Music app side project: <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
+        </div>
+        <div class="top-64"></div>
+      </div>
+    </div>
+    <!-- End Spectacular -->
     <!-- ThirdLine -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -60,50 +166,21 @@
           <div class="work-title">
             ThirdLine
           </div>
-          <div class="work-date">
+          <!-- <div class="work-date">
             2022 - Present
-          </div>
+          </div> -->
         </div>
         <div class="work-hero"
              style="background-image: url(images/hero-thirdline.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Design Consultant</b> — Early stage product development, design, and marketing
+          <b>Design and Strategy Consultant</b> — Early stage product development, design, and marketing
         </div>
         <div class="top-64"></div>
       </div>
-    </div><!-- End ThirdLine -->
-    <!-- Spectacular -->
-    <div class="container-timeline">
-      <div class="timeline-ruler">
-        <div class="ruler-badge">
-          <div class="icon icon-work"
-               style="margin: 0;"></div>
-        </div>
-        <div class="ruler-border">
-          &nbsp;
-        </div>
-      </div>
-      <div class="timeline-work">
-        <div class="work-header">
-          <div class="work-title">
-            Spectacular
-          </div>
-          <div class="work-date">
-            2022 - Present
-          </div>
-        </div>
-        <div class="work-hero"
-             style="background-image: url(images/hero-spectacular.png);">
-          &nbsp;
-        </div>
-        <div class="work-subtitle-h1">
-          <b>Side Project</b> — <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
-        </div>
-        <div class="top-64"></div>
-      </div>
-    </div><!-- End Spectacular -->
+    </div>
+    <!-- End ThirdLine -->
     <!-- BCG -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -120,21 +197,21 @@
           <div class="work-title">
             BCG
           </div>
-          <div class="work-date">
+          <!-- <div class="work-date">
             2020 - 2022
-          </div>
+          </div> -->
         </div>
         <div class="work-hero"
              style="background-image: url(images/hero-bcg.png);">
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Outside Consultant</b> — Designer/Developer expanding internal Learning Management System (LMS)
+          <b>Design Consultant</b> — Designer/Developer expanding internal Learning Management System (LMS)
         </div>
-        <div class="system-note top-32">
+        <!-- <div class="system-note top-32">
           <div class="icon icon-information"
                style="filter: invert(23%) sepia(0%) saturate(0%) hue-rotate(197deg) brightness(100%) contrast(92%);"></div>Work available upon request
-        </div>
+        </div> -->
         <div class="top-64"></div>
       </div>
     </div><!-- End BCG -->
@@ -154,9 +231,9 @@
           <div class="work-title">
             Remesh
           </div>
-          <div class="work-date">
+          <!-- <div class="work-date">
             2015 - 2019
-          </div>
+          </div> -->
         </div>
         <div class="work-hero"
              style="background-image: url(images/hero-remesh.png);">
@@ -407,69 +484,15 @@
                  class="thumbnails-remesh"
                  src="images/casestudy-23-thumb.png"
                  style="display: none;"></a>
-            <div class="work-subtitle-h2 top-16">
+            <!-- <div class="work-subtitle-h2 top-16">
               <b>Designing Remesh</b> — From MVP to Product Market Fit
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="top-64"></div>
       </div>
-    </div><!-- End Remesh -->
-    <!-- Logrr -->
-    <div class="container-timeline">
-      <div class="timeline-ruler">
-        <div class="ruler-badge">
-          <div class="icon icon-work"
-               style="margin: 0;"></div>
-        </div>
-        <div class="ruler-border">
-          &nbsp;
-        </div>
-      </div>
-      <div class="timeline-work">
-        <div class="work-header">
-          <div class="work-title">
-            Logrr
-          </div>
-          <div class="work-date">
-            2015
-          </div>
-        </div>
-        <div class="work-hero"
-             style="background-image: url(images/hero-logrr.png);">
-          &nbsp;
-        </div>
-        <div class="work-subtitle-h1">
-          <b>Early Stage Startup</b> — Product, brand, and communication design for early stage tech startup
-        </div>
-        <!-- <div class="work-thumbnails top-32">
-          <div style="display: flex; justify-content: inherit;">
-            <a class="remesh-link"
-                 data-caption=""
-                 data-fancybox="logrr"
-                 href="images/logrr-01.png"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/logrr-01-thumb.png"></a> <a class="remesh-link"
-                 data-caption=""
-                 data-fancybox="logrr"
-                 href="images/logrr-02.png"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/logrr-02-thumb.png"></a> <a class="remesh-link"
-                 data-caption=""
-                 data-fancybox="logrr"
-                 href="images/logrr-03.png"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/logrr-03-thumb.png"></a> <a class="remesh-link"
-                 data-caption=""
-                 data-fancybox="logrr"
-                 href="images/logrr-04.png"><img alt=""
-                 class="thumbnails-remesh"
-                 src="images/logrr-04-thumb.png"></a>
-          </div>
-        </div> -->
-        <div class="top-64"></div>
-      </div>
-    </div><!-- End Logrr -->
+    </div>
+    <!-- End Remesh -->
     <!-- Techstars -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -486,9 +509,9 @@
           <div class="work-title">
             Techstars
           </div>
-          <div class="work-date">
+          <!-- <div class="work-date">
             2015
-          </div>
+          </div> -->
         </div>
         <div class="work-hero"
              style="background-image: url(images/hero-techstars.png);">
@@ -499,55 +522,8 @@
         </div>
         <div class="top-64"></div>
       </div>
-    </div><!-- End Techstars -->
-    <!-- University -->
-    <div class="container-timeline">
-      <div class="timeline-ruler">
-        <div class="ruler-badge">
-          <div class="icon icon-school"
-               style="margin: 0;"></div>
-        </div>
-        <div class="ruler-border">
-          &nbsp;
-        </div>
-      </div>
-      <div class="timeline-work">
-        <div class="work-header">
-          <div class="work-title">
-            University
-          </div>
-          <div class="work-date">
-            2014
-          </div>
-        </div>
-        <div class="work-hero"
-             style="background-image: url(images/hero-ou.png);">
-          &nbsp;
-        </div>
-        <div class="work-subtitle-h1">
-          <b>BFA</b> — Visual Communication
-        </div>
-        <!-- <div class="work-thumbnails top-32">
-          <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-01.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-01-thumb.png"></a> <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-02.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-02-thumb.png"></a> <a class="university-link"
-               data-caption=""
-               data-fancybox="university"
-               href="images/university-03.png"><img alt=""
-               class="thumbnails-university"
-               src="images/university-03-thumb.png"></a>
-        </div> -->
-        <div class="top-64"></div>
-      </div>
-    </div><!-- End University -->
+    </div>
+    <!-- End Techstars -->
     <!-- Vans -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -562,11 +538,11 @@
       <div class="timeline-work">
         <div class="work-header">
           <div class="work-title">
-            Vans
+            IMG Action Sports
           </div>
-          <div class="work-date">
+          <!-- <div class="work-date">
             2013
-          </div>
+          </div> -->
         </div>
         <div class="work-hero"
              style="background-image: url(images/hero-vans.png);">
@@ -575,7 +551,7 @@
         <div class="work-subtitle-h1">
           <b>"Off The Wall Pass"</b> — US Open of Surfing experiential marketing digital activation
         </div>
-        <div class="work-thumbnails top-32">
+        <!-- <div class="work-thumbnails top-32">
           <a class="vans-link"
                data-caption=""
                data-fancybox="vans"
@@ -587,23 +563,47 @@
                href="images/vans-02.png"><img alt=""
                class="thumbnails-vans"
                src="images/vans-02-thumb.png"></a>
-        </div>
+        </div> -->
       </div>
     </div><!-- End Vans -->
+    <!-- Content Container -->
+  <div class="content-container"
+  style="padding: 128px 32px 128px; max-width: 520px;">
+<a class=""
+    href="mailto:btlhart@gmail.com">
+<div class="card-note"
+    style="border-radius: 20px;">
+ <div class="h1"
+      style="text-align: center;">
+   Thanks for stopping&nbsp;by
+ </div>
+ <div class="dot">
+   •<br>
+   <br>
+ </div>
+ <div style="font-size: 20px; line-height: 32px; text-align: center;">
+   To reach out, please click the link&nbsp;below:
+ </div>
+ <div class="primary-btn top-24 mobile-stretch"
+      style="flex: 0 1 280px;">
+   <div class="icon icon-email"></div>Connect
+ </div>
+</div></a>
+<div style="width: 100%; justify-content: center; display: flex;">
+ <a class="secondary-link top-32"
+      href="#top"><b>Back to Top</b></a>
+</div>
+</div><!-- End Content Container -->
     <!-- About Page Button -->
-     <a class="mobile-stretch"
-         href="about.html"
+     <!-- <a class="mobile-stretch"
+         href="#top"
          style="margin: 64px auto 0;">
     <div class="primary-btn mobile-stretch">
-      Learn More and Connect
+      Back to Top
       <div class="icon icon-next icon-blue"
            style="margin:0 0 0 8px;"></div>
-    </div></a> <!-- End About Page Button -->
-    <div style="width: 100%; justify-content: center; display: flex;">
-      <a class="secondary-link top-24"
-           href="#top"><b>Back to Top</b></a>
-    </div>
-  </div><!-- End Content Container -->
+    </div></a> -->
+    <!-- End Content Container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
