--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
     </div>
     <div class="about-text">
       Ben brings products, experiences, and brands to life using design, code, research and strategy.
-      <p>Outside of work, Ben likes to keep a sense of adventure and creative pursuit by staying active, having side projects, and continual learning.</p>
-      <p>He believes in the power of design and the power of curious people when they work together.</p>
+      <br><br>He has led design at a high-growth A.I. tech startup, consulted with startups, worked for the top global startup accelerator, Techstars, and worked with companies such as BCG, IMG, and Vans.
+      <br><br>Today, Ben works with companies through his digital product and creative agency, DigitalRanch.
+    </div>
+    <div class="h1"
+         style="width: 100%;">
+      <br><br>Previous Work
+      <div class="about-text"
+           style="font-weight: normal;">
+           Experience
+      </div>
     </div>
   </div><!-- End Content Container -->
   <!-- Spacer -->
@@ -113,7 +121,8 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Founder</b> — Digital product and creative agency: <a class="secondary-link" style="display: inline-block;" href="https://digital-ranch.webflow.io" target="_blank">digitalranch.co</a>
+          <b>Owner</b> — Digital product and creative agency 
+          <!-- <a class="secondary-link" style="display: inline-block;" href="https://digital-ranch.webflow.io" target="_blank">digitalranch.co</a> -->
         </div>
         <div class="top-64"></div>
       </div>
@@ -133,7 +142,7 @@
       <div class="timeline-work">
         <div class="work-header">
           <div class="work-title">
-            Spec.
+            Spec
           </div>
           <!-- <div class="work-date">
             2022 - Present
@@ -144,7 +153,8 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Founder</b> — Music app side project: <a class="secondary-link" style="display: inline-block;" href="http://getspectacular.app" target="_blank">getspectacular.app</a>
+          <b>Founder</b> — Music app side project 
+          <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">getspec.app</a>
         </div>
         <div class="top-64"></div>
       </div>
