--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Founder</b> — Music app side project 
+          <b>Founder</b> — Music app 
           <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">getspec.app</a>
         </div>
         <div class="top-64"></div>
@@ -367,7 +367,11 @@
             </div>
           </div>
         </div> -->
-        <div class="card-prototype-container top-40">
+        <div class="work-date top-48"
+         style="text-transform: uppercase;color:#c1c1c1">
+         Crossing the Chasm
+        </div>
+        <div class="card-prototype-container">
           <div class="card-prototype-columnns top-24"
                style="width: 100%;">
             <a data-caption=""
@@ -381,7 +385,7 @@
                    style="background-image: url(images/casestudy-thumb.png);"></div>
               <div class="primary-btn top-16 mobile-stretch sides-16"
                    style="width: 100%;">
-                <div class="icon icon-view"></div>View Case Study
+                <div class="icon icon-view"></div>View Remesh Case Study
               </div>
             </div></a> <a data-caption=""
                  data-fancybox="casestudy"
