--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
    <br>
  </div>
  <div style="font-size: 20px; line-height: 32px; text-align: center;">
-   To reach out, please click the link&nbsp;below:
+   To reach out, click the link&nbsp;below:
  </div>
  <div class="primary-btn top-24 mobile-stretch"
       style="flex: 0 1 280px;">
