--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <br><br>Today, Ben works with companies through his digital product and creative agency, DigitalRanch.
     </div>
     <div class="h1"
-         style="width: 100%;">
+         style="width: 100%; color: #c1c1c1;">
       <br><br>Previous Work
       <div class="about-text"
            style="font-weight: normal;">
