--- a/index.html
+++ b/index.html
@@ -82,20 +82,25 @@
       <br><br>He has led design at a high-growth A.I. tech startup, consulted with startups, worked for the top global startup accelerator, Techstars, and worked with companies such as BCG, IMG, and Vans.
       <br><br>Today, Ben works with companies through his digital product and creative agency, DigitalRanch.
     </div>
-    <div class="h1"
+    <!-- <div class="h1"
          style="width: 100%; color: #c1c1c1;">
       <br><br>Previous Work
       <div class="about-text"
            style="font-weight: normal;">
            Experience
       </div>
-    </div>
+    </div> -->
   </div><!-- End Content Container -->
   <!-- Spacer -->
   <div class="top-64"></div><!-- End Spacer -->
+
   <!-- Content Container -->
   <div class="content-container"
        style="padding-bottom: 64px;">
+       <div class="work-date top-32"
+         style="text-transform: uppercase;color:#c1c1c1">
+      Experience<br><br>
+    </div>
     <!-- Spectacular -->
     <div class="container-timeline">
       <div class="timeline-ruler">
@@ -121,7 +126,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Owner</b> — Digital product and creative agency 
+          <b>Agency Owner</b> — Digital product and creative agency 
           <!-- <a class="secondary-link" style="display: inline-block;" href="https://digital-ranch.webflow.io" target="_blank">digitalranch.co</a> -->
         </div>
         <div class="top-64"></div>
@@ -153,7 +158,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Founder</b> — Music app 
+          <b>Indie Founder</b> — Music app 
           <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">getspec.app</a>
         </div>
         <div class="top-64"></div>
@@ -185,7 +190,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Design and Strategy Consultant</b> — Early stage product development, design, and marketing
+          <b>Product Strategy Consultant</b> — Early stage product development, design, and marketing
         </div>
         <div class="top-64"></div>
       </div>
@@ -532,7 +537,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Startup Accelerator</b> — Pitch, branding, and product design for startup accelerator cohort companies
+          <b>Startup Accelerator Team Member</b> — Pitch, branding, and product design for startup accelerator cohort companies
         </div>
         <div class="top-64"></div>
       </div>
@@ -563,7 +568,7 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>"Off The Wall Pass"</b> — US Open of Surfing experiential marketing digital activation
+          <b>"Off The Wall Pass" Interactive Design</b> — US Open of Surfing experiential marketing digital activation
         </div>
         <!-- <div class="work-thumbnails top-32">
           <a class="vans-link"
