--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
   <div class="top-64"></div><!-- End Spacer -->
 
   <!-- Content Container -->
-  <div class="content-container"
-       style="padding-bottom: 64px;">
+  <div class="content-container">
        <div class="work-date top-32"
          style="text-transform: uppercase;color:#c1c1c1">
       Experience<br><br>
