--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
       </div>
     </div>
     <!-- End Spectacular -->
+  </div>
+
+
+
 
   <!-- Content Container -->
   <div class="content-container">
@@ -630,6 +634,7 @@ To reach out click the link&nbsp;below
            style="margin:0 0 0 8px;"></div>
     </div></a> -->
     <!-- End Content Container -->
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script> 
   <script src="jquery.fancybox.min.js"></script> 
   <script>
