--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
      </div>
      <div class="work-subtitle-h1">
        <b>Product Strategy Consultant</b> — Early stage product development, design, and marketing
+       <br><br><a class="secondary-link" style="display: inline-block;" href="http://thirdline.io" target="_blank">thirdline.io</a>
      </div>
      <div class="top-64"></div>
    </div>
@@ -233,6 +234,7 @@
      </div>
      <div class="work-subtitle-h1">
        <b>Design Consultant</b> — Designer/Developer expanding internal Learning Management System (LMS)
+       <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">bcg.com</a>
      </div>
      <!-- <div class="system-note top-32">
        <div class="icon icon-information"
@@ -267,6 +269,7 @@
      </div>
      <div class="work-subtitle-h1">
        <b>Founding Team Design Lead</b> — Lead product design and marketing from pre-funding to Series A
+       <br><br><a class="secondary-link" style="display: inline-block;" href="http://remesh.ai" target="_blank">remesh.ai</a>
      </div>
      <!-- <div class="work-thumbnails top-32">
        <div style="display: flex; justify-content: inherit; width: 100%;">
@@ -398,7 +401,13 @@
               style="display: none;">
          <div class="card-note card-prototype">
            <div class="prototype-casestudy prototype-cover"
-                style="background-image: url(images/casestudy-thumb.png);"></div>
+                style="background-image: url(images/casestudy-thumb.png);">
+                <div class="prototype-cover_overlay">
+                  <div class="prototype-cover_overlay-text">
+                    Designing<br>Remesh
+                  </div>
+                </div>              
+          </div>
            <div class="primary-btn top-16 mobile-stretch sides-16"
                 style="width: 100%;">
              <div class="icon icon-view"></div>View Remesh Case Study
@@ -549,6 +558,7 @@
      </div>
      <div class="work-subtitle-h1">
        <b>Startup Accelerator Team Member</b> — Pitch, branding, and product design for startup accelerator cohort companies
+       <br><br><a class="secondary-link" style="display: inline-block;" href="http://techstars.com" target="_blank">techstars.com</a>
      </div>
      <div class="top-64"></div>
    </div>
@@ -580,6 +590,7 @@
      </div>
      <div class="work-subtitle-h1">
        <b>"Off The Wall Pass" Interactive Design</b> — US Open of Surfing experiential marketing digital activation
+       <br><br><a class="secondary-link" style="display: inline-block;" href="http://vans.com" target="_blank">vans.com</a>
      </div>
      <!-- <div class="work-thumbnails top-32">
        <a class="vans-link"
